<resources>
    <!-- main menu -->
    <string name="app_name">Game Collection</string>
    <string name="AddButton">Add Game</string>
    <string name="noGames">You have no games :(</string>
    <string name="titleDisplay">%1$s (%2$s)</string>

    <!-- overflow menu -->
    <string name="settingsOption">Settings</string>
    <string name="aboutOption">About</string>
    <string name="aboutText">App by Mitchell Bennett \nv0.1 \nVideo Game Information provided by IGDB</string>
    <string name="aboutTitle">About</string>
    <string name="refresh">Refresh Games</string>

    <string name="add">Add</string>
    <string name="newPlatform">New Platform</string>
    <string name="newStatus">New Status</string>
    <string name="resetDatabase">Reset Database</string>
    <string name="emptyPlatform">Please enter a platform</string>
    <string name="emptyStatus">Please enter a status</string>

    <string name="statusAdded">New Status Added</string>
    <string name="platformAdded">New Platform Added</string>
    <string name="databaseCleared">Database Reset. Please refresh.</string>
    <string name="alert">ALERT</string>
    <string name="confirmMessage">THIS ACTION CANNOT BE UNDONE, ARE YOU SURE?</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>

    <!-- Game Details -->
    <string name="notesText">Notes:</string>
    <string name="backButton">Back</string>

    <string name="titleDetail"><b>%1$s</b> (%2$s)</string>
    <string name="publisher">Publisher: %1$s</string>
    <string name="developer">Developer: %1$s</string>
    <string-array name="statusTest">
        <item>plink</item>
        <item>plonk</item>
        <item>plank</item>
    </string-array>

    <string name="EditGame">Edit</string>
    <string name="DeleteGame">Delete</string>

    <!-- Add Game -->
    <string name="addGameLabel">Add Game</string>
    <string name="searchLabel">Find Game:</string>
    <string name="search">Search</string>
    <string name="or">or!</string>
    <string name="blankTemplateButton">Use a blank template!</string>

    <string name="connectionError">Could not connect to servers. Try again later.</string>
    <string name="entryError">Please enter a game title.</string>
    <string name="noGamesFound">No games were found.</string>
    <string name="nullList">List is null</string>

    <!-- Game Form -->
    <string name="editGameLabel">Edit Game</string>
    <string name="titleLabel">Title:</string>
    <string name="releaseDateLabel">Release Date:</string>
    <string name="developerLabel">Developer: </string>
    <string name="publisherLabel">Publisher:</string>
    <string name="platformLabel">Platform: </string>
    <string name="statusLabel">Status:</string>
    <string name="descriptionLabel">Description:</string>
    <string name="submitButton">Submit</string>
    <string name="cat">cat</string>

    <string name="formSuccess">Game %1$s successfully</string>
    <string name="formAdd">added</string>
    <string name="formEdit">edited</string>
    <string name="formError">Something went wrong..</string>


</resources>