<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/blankTemplateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/blankTemplateButton"
        app:layout_constraintEnd_toEndOf="@+id/orLabel"
        app:layout_constraintStart_toStartOf="@+id/orLabel"
        app:layout_constraintTop_toBottomOf="@+id/orLabel" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/resultList"
        android:layout_width="371dp"
        android:layout_height="327dp"
        android:layout_marginTop="20dp"
        app:layout_constraintStart_toStartOf="@+id/topLabel"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/topLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/addGameLabel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/searchLabel"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/topLabel"
        app:layout_constraintTop_toBottomOf="@+id/topLabel" />

    <EditText
        android:id="@+id/searchBar"
        android:layout_width="177dp"
        android:layout_height="37dp"
        android:layout_marginStart="8dp"
        android:ems="10"
        android:inputType="text"
        android:text=""
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.461" />

    <Button
        android:id="@+id/searchButton"
        android:layout_width="92dp"
        android:layout_height="41dp"
        android:layout_marginStart="4dp"
        android:text="@string/search"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="@+id/searchBar"
        app:layout_constraintStart_toEndOf="@+id/searchBar" />

    <TextView
        android:id="@+id/orLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="@string/or"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resultList" />

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/backButton"
        app:layout_constraintEnd_toEndOf="@+id/blankTemplateButton"
        app:layout_constraintStart_toStartOf="@+id/blankTemplateButton"
        app:layout_constraintTop_toBottomOf="@+id/blankTemplateButton" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="279dp"
        android:layout_height="22dp"
        android:layout_marginTop="12dp"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/searchBar" />
</androidx.constraintlayout.widget.ConstraintLayout>